route generate oauth2 url for cognito and redirect to custome route /google-auth/token and get the code from query this route and request accesstoken with cognito endpoint .../oauth2/token
